--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section id="contact">
         <h2>문의하기</h2>
-        <p>Email: jungms305@gmail.com</p>
+        <p>Email: Jungms305@gmail.com</p>
         <p>GitHub: <a href="https://github.com/wjdalstjr" target="_blank">github.com/wjdalstjr</a></p>
     </section>
 
